--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ android {
     defaultConfig {
         applicationId "com.github.glyphshot"
         minSdkVersion 11
+        targetSdkVersion 11
         versionCode 1
         versionName "1.0"
     }
